2005-05-07  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(reserve): Removed.
	(gcThrowOOM): Use gc_primitive_use_reserve.
	(KaffeGC_Init): Adapted to the new prototype.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.h
	(KGC_NUMBER_OF_PAGES_IN_RESERVE): New constant.

	* kaffe/kaffevm/kaffe-gc/gc-mem.c
	(gc_reserve_pages): New variable.
	(gc_primitive_reserve): Store the reserved block in a private
	variable.
	(gc_primitive_use_reserve): New function.
	(gc_block_alloc): Update gc_reserve_pages if the block array is
	reallocated.

2005-05-07  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/internal/jit_stub.c: Changed ABORT to KAFFEVM_ABORT.

2005-05-07  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Resynced with GNU Classpath:

	2005-05-05  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/StreamSerializer.java: Produce compact,
	human-readable XML for non-UTF/ASCII encodings using NIO.

2005-05-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_exit): Release the thread list lock before exiting.

2005-05-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/boehm-gc/boehm/Makefile.am,
	kaffe/kaffevm/boehm-gc/boehm/Makefile.in,
	kaffe/kaffevm/boehm-gc/boehm/aix_irix_threads.c,
	kaffe/kaffevm/boehm-gc/boehm/allchblk.c,
	kaffe/kaffevm/boehm-gc/boehm/alloc.c,
	kaffe/kaffevm/boehm-gc/boehm/backgraph.c,
	kaffe/kaffevm/boehm-gc/boehm/configure,
	kaffe/kaffevm/boehm-gc/boehm/configure.ac,
	kaffe/kaffevm/boehm-gc/boehm/darwin_stop_world.c,
	kaffe/kaffevm/boehm-gc/boehm/dyn_load.c,
	kaffe/kaffevm/boehm-gc/boehm/finalize.c,
	kaffe/kaffevm/boehm-gc/boehm/mach_dep.c,
	kaffe/kaffevm/boehm-gc/boehm/mark.c,
	kaffe/kaffevm/boehm-gc/boehm/misc.c,
	kaffe/kaffevm/boehm-gc/boehm/os_dep.c,
	kaffe/kaffevm/boehm-gc/boehm/powerpc_darwin_mach_dep.s,
	kaffe/kaffevm/boehm-gc/boehm/pthread_support.c,
	kaffe/kaffevm/boehm-gc/boehm/reclaim.c,
	kaffe/kaffevm/boehm-gc/boehm/solaris_pthreads.c,